--- a/starter/src/App.css
+++ b/starter/src/App.css
@@ -124,6 +124,7 @@ body,
 
 .book {
   width: 140px;
+  position: relative;
 }
 .book-title,
 .book-authors {
@@ -158,7 +159,7 @@ body,
   box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
 }
 .book-shelf-changer select {
-  width: 100%;
+  width: 200px;
   height: 100%;
   opacity: 0;
   cursor: pointer;
